--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "@reduxjs/toolkit": "^2.9.1",
+    "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "prisma": "^6.17.1",
     "react": "19.1.0",
