--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.17.1",
     "@reduxjs/toolkit": "^2.9.1",
     "lucide-react": "^0.546.0",
