--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.17.1",
     "@reduxjs/toolkit": "^2.9.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "prisma": "^6.17.1",
