--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.4",
     "prisma": "^6.17.1",
     "react": "19.1.0",
