--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.17.1",
     "@reduxjs/toolkit": "^2.9.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
