--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^6.17.1",
     "@reduxjs/toolkit": "^2.9.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.3",
     "bcryptjs": "^3.0.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -31,6 +32,7 @@
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
